[project]
name = "packageinstaller"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click (>=8.2.1,<9.0.0)",
    "sentence-transformers (>=5.1.0,<6.0.0)",
    "transformers (>=4.56.1,<5.0.0)",
    "accelerate (>=1.10.1,<2.0.0)",
    "openai-agents (>=0.2.11,<0.3.0)",
    "ollama (>=0.5.3,<0.6.0)"
]
packages = [{include = "packageinstaller"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
depinstaller = "packageinstaller.cli:auth"
